Add getTaskStatus method
